# ruskview

./: .eslintrc.cjs  .gitignore  README.md  index.html  package-lock.json  package.json  run_dev.sh  tailwind.config.js
.github/: copilot-instructions.md
.github/instructions/: 01_arch_blueprint.instructions.md  02_backend_design.instructions.md  03_frontend_design.instructions.md
design/: UI_UX.md  generate_icon.py
docs/: theme.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: auth.rs  commands.rs  db.rs  es.rs  lib.rs  main.rs  state.rs
src-tauri/src/auth/: aws.rs  basic.rs
src-tauri/src/es/: client.rs  cluster.rs  index.rs
src-tauri/src/models/: connection.rs
src/components/: SettingsModal.tsx  Sidebar.tsx  ToastContainer.tsx
src/stores/: useAppStore.ts  useToastStore.ts
src/views/: Dashboard.tsx  Login.tsx
