[package]
name = "ruskview"
version = "0.0.2"
edition = "2024"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = ["macos-private-api"] }
tauri-plugin-shell = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
aws-sigv4 = "1.3.6"
aws-credential-types = "1.2.0"
aws-smithy-runtime-api = "1.7.0"
http = "1.4.0"
chrono = "0.4.42"
sha2 = "0.10.9"
base64 = "0.22.1"
hex = "0.4.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
rusqlite = { version = "0.32", features = ["bundled"] }
magic-crypt = "3.1"
uuid = { version = "1.10", features = ["v4", "serde"] }
async-trait = "0.1.89"
